--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,17 @@
 <resources>
     <string name="app_name">AeroKit</string>
+    <string name="settings">Settings</string>
+    <string name="theme">Theme</string>
+    <string name="language">Language</string>
+    <string name="about_help">About / Help</string>
+    <string name="version">Version: %1$s</string>
+    <string name="contact_support_feedback">Contact / Support / Feedback</string>
+    <string name="support_email">support@yourdomain.com</string>
+    <string name="privacy_policy">Privacy Policy</string>
+    <string name="terms_of_service">Terms of Service</string>
+    <string name="light">Light</string>
+    <string name="dark">Dark</string>
+    <string name="auto">Auto</string>
+    <string name="english">English</string>
+    <string name="french">Français</string>
 </resources>
