dd custom aviation abbreviations management and data cleanup
- Allow users to add and remove custom aviation abbreviations
- Save custom abbreviations globally (shared between screens)
- Add 'Clear Custom Abbreviations' button in Settings with confirmation dialog
- Remove category field from abbreviation entries for simplicity
- Ensure all abbreviations are displayed alphabetically

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">AeroKit</string>
+    <string name="app_name">AeroTool</string>
     <string name="settings">Paramètres</string>
     <string name="theme">Thème</string>
     <string name="language">Langue</string>
