--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">AeroKit</string>
+    <string name="app_name">AeroTool</string>
     <string name="settings">Settings</string>
     <string name="theme">Theme</string>
     <string name="language">Language</string>
